[tool.poetry]
name = "opalizer"
version = "0.1.0"
description = ""
authors = ["Ganesh Raskar <ganeshraskar@outlook.com>"]
readme = "README.md"
packages = [{include = "opalizer", from = "opalizer"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
opentelemetry-instrumentation-fastapi = "^0.39b0"
rich = "^13.4.1"
slowapi = "^0.1.8"
schedule = "^1.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
orjson = "^3.9.1"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.9"
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.27.0"
unidecode = "^1.3.6"
psycopg = "^3.1.9"
alembic = "1.11.1"
geopy = {extras = ["aiohttp"], version = "^2.3.0"}
python-geohash = "^0.8.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
ipykernel = "^6.23.1"
pytest-asyncio = "^0.21.0"
async-asgi-testclient = "^1.4.11"
nest-asyncio = "^1.5.6"
pytest-dependency = "^0.5.1"
folium = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
